--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hotwire_wordle",
+  "name": "stimulus_wordle",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
-    "@hotwired/turbo": "^7.2.5",
     "stimulus-vite-helpers": "^3.0.1"
   }
 }
