--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://helmicodes.github.io/stimulus_wordle/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "vite": "^4.1.0"
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
+    "gh-pages": "^5.0.0",
     "stimulus-vite-helpers": "^3.0.1"
   }
 }
